# schemy

./: LICENSE  README.md  schemy.cabal
app/: Main.hs
test/: LibSpec.hs
